--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extensions-lab"]
 	path = extensions-lab
-	url = https://github.com/asciidoctor/asciidoctor-extensions-lab.git
+	url = https://github.com/asciidocfx/asciidoctor-extensions-lab.git
+[submodule "asciidoctor"]
+	path = asciidoctor
+	url = https://github.com/asciidocfx/asciidoctor.git
