--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "test": "node npm/test/jasmine-bower.js && node npm/test/jasmine-bower-min.js && node npm/test/jasmine-npm.js",
-    "build": "node npm/build.js && npm run test",
+    "build": "node npm/build.js",
     "package": "MINIFY=1 node npm/build.js && MINIFY=1 npm run test",
     "examples": "node npm/examples.js",
     "benchmark": "node npm/benchmark.js",
