--- a/package.json
+++ b/package.json
@@ -50,9 +50,16 @@
   "devDependencies": {
     "async": "^1.5.0",
     "bower": "^1.5.3",
+    "browserify": "^13.0.0",
     "colors": "1.1.2",
-    "cross-env": "^1.0.8",
     "jasmine": "^2.4.1",
-    "tar-fs": "1.11.1"
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.7",
+    "tar-fs": "1.11.1",
+    "watchify": "^3.7.0"
   }
 }
